--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,3 +37,9 @@ body{
   top: 10%;
 }
 
+h1{
+  position: relative;
+  top: 5%;
+  left: 5%;
+  font-family: 'Blade Runner Movie Font', sans-serif;
+}
