--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,11 @@
   </head>
 
   <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-md bg-body-tertiary">
     <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
@@ -34,23 +37,18 @@
           </li>
           <li class="nav-item">
             <a class="navbar-brand" <%=link_to 'Loja', root_url %></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
           </li>
         </ul>
         <%= form_tag busca_produto_path, method: :get, class:"d-flex" do %>
-        <form class="d-flex" role="search">
-          <input <%= text_field_tag :nome, @nome, class:"form-control me-2" %>
-          <button class="btn btn-outline-success" type="submit">Search</button>
-
-        </form>
+          <form class="d-flex" role="search">
+            <input <%= text_field_tag :nome, @nome, class:"form-control me-2" %>
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
         <% end %>
-
-
       </div>
     </div>
   </nav>
-    <%= yield %>
+
+  <%= yield %>
   </body>
 </html>
