--- a/app/views/produtos/new.html.erb
+++ b/app/views/produtos/new.html.erb
@@ -33,11 +33,14 @@
     <label for="formGroupExampleInput2">Quantidade</label>
     <input type="number" name="produto[quantidade]" class="form-control"  id="formGroupExampleInput2" placeholder="0">
   </div>
-
-  <div class="field">
-  <%= form.label :image %>
-  <%= form.file_field :image %>
-</div>
+  <div class="form-group">
+    <label for="formGroupExampleInput">Marca</label>
+    <input type="text" name="produto[marca]" class="form-control"  id="formGroupExampleInput" placeholder="Nome">
+  </div>
+  <div class="mb-3">
+    <%= form.label :imagem, class:"form-label" %>
+    <%= form.file_field :imagem, class:"form-control" %>
+  </div>
   <br>
   <button type="submit" class="btn btn-primary">Criar</button>
 </div>
